# dotcpp

./: .gitignore  Cl.Cpp11.2013.x64.sln  Cl.DotCpp.Cpp.sln  Cl.DotCpp.Cpp.x64.sln  Cl.DotCpp.Cs.sln  README.md
cpp/src/: CMakeLists.txt  CMakeSettings.json  DotCpp.Cpp.sln
cpp/src/dotcpp-test/dot/test/: DotCpp.Test.Cpp.vcxproj  declare.hpp  implement.hpp  import.hpp  main.cpp
cpp/src/dotcpp-test/dot/test/noda_time/: LocalDateTest.cpp  LocalDateTimeTest.cpp  LocalMinuteTest.cpp  LocalTimeTest.cpp  PeriodTest.cpp  local_date_test.cpp  local_minute_test.cpp  localtimetest.cpp  period_test.cpp
cpp/src/dotcpp/dot/: CMakeLists.txt  DotCpp.Cpp.vcxproj  declare.hpp  implement.hpp  import.hpp  precompiled.cpp  precompiled.hpp
cpp/src/dotcpp/dot/detail/: array_base.hpp  const_string_base.hpp  enum_macro.hpp  iterator.hpp  macro.hpp  object_iterator.hpp  property.hpp  reference_counter.hpp  reflection_macro.hpp  struct_wrapper.hpp  traits.hpp
cpp/src/dotcpp/dot/noda_time/: LocalDate.cpp  LocalDate.hpp  LocalDateTime.cpp  LocalDateTime.hpp  LocalMinute.cpp  LocalMinute.hpp  LocalTime.cpp  LocalTime.hpp  Period.cpp  Period.hpp  local_date.cpp  local_date.hpp  local_date_time.cpp  local_date_time.hpp  local_date_time_util.cpp  local_date_time_util.hpp  local_date_util.cpp  local_date_util.hpp  local_minute.cpp  local_minute.hpp  local_minute_util.cpp  local_minute_util.hpp  local_time.cpp  local_time.hpp  local_time_util.cpp  local_time_util.hpp  period.cpp  period.hpp
cpp/src/dotcpp/dot/system/: Array.hpp  Array1D.hpp  Bool.cpp  Bool.hpp  Char.cpp  Char.hpp  Console.hpp  Double.cpp  Double.hpp  Enum.cpp  Enum.hpp  Environment.cpp  Environment.hpp  Exception.cpp  Exception.hpp  Int.cpp  Int.hpp  Long.cpp  Long.hpp  Nullable.hpp  NullableBool.hpp  NullableDouble.hpp  NullableInt.hpp  NullableLong.hpp  Object.cpp  Object.hpp  ObjectImpl.cpp  ObjectImpl.hpp  Ptr.hpp  String.cpp  String.hpp  StringSplitOptions.hpp  Type.cpp  Type.hpp  array.hpp  bool.cpp  bool.hpp  char.cpp  char.hpp  console.hpp  (+25 more)
dotcpp/cpp/cl/dotcpp/main/: CMakeLists.txt  Cl.DotCpp.Main.Cpp.vcxproj  Cl.System.Cpp11.2013.x64.vcxproj  declare.hpp  implement.hpp  import.hpp
dotcpp/cpp/cl/dotcpp/main/detail/: macro.hpp  (+9 more)
dotcpp/cpp/cl/dotcpp/test/: CMakeLists.txt  Cl.DotCpp.Test.Cpp.vcxproj  declare.hpp  implement.hpp  import.hpp  main.cpp
(+464 files in other folders)
